# RoboDog

./: README.md
.push-token/: push-token.txt
docs/: motion_cmd_source.sh  old_repo_link.txt  pi_local_repo.txt  pi_settings.txt  static_ip.txt
docs/past_docs/: README.md
install/: local_setup.sh  setup.sh
install/i2cpwm_controller/include/i2cpwm_controller/i2cpwm_controller/msg/: rosidl_typesupport_introspection_c__visibility_control.h  servo.h  servo_array.hpp  servo_config_array.h
install/i2cpwm_controller/include/i2cpwm_controller/i2cpwm_controller/msg/detail/: position__builder.hpp  position__functions.h  position__struct.hpp  position__type_support.h  position_array__type_support.cpp  position_array__type_support.h  servo__functions.h  servo__traits.hpp  servo_array__functions.h  servo_array__rosidl_typesupport_introspection_c.h  servo_config__rosidl_typesupport_fastrtps_cpp.hpp  servo_config__struct.h  servo_config__type_support.c  servo_config__type_support.cpp  servo_config__type_support.h  servo_config_array__rosidl_typesupport_introspection_cpp.hpp  servo_config_array__type_support.c
install/i2cpwm_controller/include/i2cpwm_controller/i2cpwm_controller/srv/: int_value.h
install/i2cpwm_controller/include/i2cpwm_controller/i2cpwm_controller/srv/detail/: drive_mode__functions.c  drive_mode__rosidl_typesupport_fastrtps_cpp.hpp  drive_mode__rosidl_typesupport_introspection_cpp.hpp  int_value__rosidl_typesupport_introspection_c.h  int_value__struct.h  servos_config__functions.c  servos_config__rosidl_typesupport_fastrtps_cpp.hpp  servos_config__rosidl_typesupport_introspection_c.h  servos_config__struct.h  servos_config__type_support.c  servos_config__type_support.cpp  servos_config__type_support.h  stop_servos__functions.c  stop_servos__type_support.c  stop_servos__type_support.cpp
install/i2cpwm_controller/share/i2cpwm_controller/: package.dsv  package.sh
install/i2cpwm_controller/share/i2cpwm_controller/cmake/: export_i2cpwm_controller__rosidl_generator_cExport.cmake  export_i2cpwm_controller__rosidl_generator_pyExport.cmake
install/i2cpwm_controller/share/i2cpwm_controller/msg/: PositionArray.idl  ServoConfigArray.idl
install/i2cpwm_controller/share/i2cpwm_controller/srv/: IntValue_Response.msg
install/servo_calibration/share/ament_index/resource_index/package_run_dependencies/: servo_calibration
install/servo_calibration/share/ament_index/resource_index/parent_prefix_path/: servo_calibration
install/servo_calibration/share/servo_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/servo_calibration/share/servo_calibration/cmake/: servo_calibrationConfig.cmake
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/i2cpwm_controller/share/i2cpwm_controller/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
ros2_ws/install/i2cpwm_controller/share/i2cpwm_controller/cmake/: ament_cmake_export_targets-extras.cmake  export_i2cpwm_controllerExport-noconfig.cmake  export_i2cpwm_controllerExport.cmake  export_i2cpwm_controller__rosidl_generator_pyExport-noconfig.cmake  export_i2cpwm_controller__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_i2cpwm_controller__rosidl_typesupport_fastrtps_cExport.cmake  export_i2cpwm_controller__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  i2cpwm_controller__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake-extras.cmake
ros2_ws/install/i2cpwm_controller/share/i2cpwm_controller/launch/: i2cpwm_node.launch.py
ros2_ws/install/i2cpwm_controller/share/i2cpwm_controller/msg/: ServoArray.idl
ros2_ws/install/i2cpwm_controller/share/i2cpwm_controller/srv/: ServosConfig.idl  StopServos.idl
ros2_ws/install/keyboard_teleop/share/keyboard_teleop/: package.sh
ros2_ws/install/motion_cmd/share/motion_cmd/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/motion_cmd/share/motion_cmd/cmake/: ament_cmake_export_dependencies-extras.cmake  motion_cmdConfig.cmake
ros2_ws/install/motion_cmd/share/motion_cmd/config/: motion_cmd.yaml
ros2_ws/install/motion_cmd/share/motion_cmd/launch/: motion_cmd.launch.py
ros2_ws/install/motor_control/share/motor_control/: package.sh
ros2_ws/install/servo_calibration/lib/servo_calibration/: servo_calib_node
ros2_ws/install/servo_calibration/share/servo_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/spot_micro_motion_cmd/share/spot_micro_motion_cmd/: package.bash  package.zsh
ros2_ws/log/: latest_build  latest_version-check
ros2_ws/src/i2cpwm_controller/: CMakeLists.txt
ros2_ws/src/i2cpwm_controller/doc/: original_ros1_implementation.cpp
ros2_ws/src/i2cpwm_controller/include/: i2cpwm_controller.h
ros2_ws/src/i2cpwm_controller/include/i2cpwm_controller/: i2cpwm_controller.h
ros2_ws/src/i2cpwm_controller/launch/: i2cpwm_controller.launch.py
ros2_ws/src/i2cpwm_controller/src/: i2cpwm_controller.cpp  main.cpp
ros2_ws/src/keyboard_teleop/: package.xml  setup.py
ros2_ws/src/keyboard_teleop/keyboard_teleop/: keyboard_control.py
ros2_ws/src/motion_cmd/: CMakeLists.txt
ros2_ws/src/motion_cmd/config/: motion_cmd.yaml
ros2_ws/src/motion_cmd/include/motion_cmd/: motion_cmd.h  utils.h
ros2_ws/src/motion_cmd/src/: main.cpp  motion_cmd.cpp  util.cpp  utils.cpp
ros2_ws/src/motion_cmd/src/smfsm/: command.h  idle.cpp  idle.h  stand.cpp  stand.h  state.cpp  state.h  transition_idle.cpp  transition_idle.h  transition_stand.cpp  transition_stand.h  walk.cpp  walk.h
ros2_ws/src/motor_control/: package.xml  setup.py
ros2_ws/src/motor_control/motor_control/: motor_control_node.py
ros2_ws/src/servo_calibration/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/servo_calibration/launch/: keyboard_move.launch.py
ros2_ws/src/servo_calibration/servo_calibration/: servo_calib_test.py  servo_move_keyboard.py
ros2_ws/src/servo_calibration/src/: servoConfigTest.py  servoMoveKeyboard.py
(+47 files in other folders)
